test/fail_compilation/fail88.d
const auto a = a; void main(){}

